--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.1.1",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "primevue": "^4.1.1",
     "vue": "^3.2.13",
